--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-list/cuentas-bancarias-list.html
@@ -1,6 +1,13 @@
 
 <h2>Listado de Cuentas Bancarias</h2>
 
+<select (change)="atributo.set($any($event.target).value)">
+  <option value="cbu">CBU</option>
+  <option value="saldo">Saldo</option>
+</select>
+
+<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
+
 <div class="botones">
     <button type="button" class="btnAgregar" routerLink="/menu/cuentas-bancarias/form"> Agregar </button>
 </div>
@@ -15,7 +22,7 @@
   </thead>
 
   <tbody>
-    @for (c of cuentasBancarias(); track $index) {
+    @for (c of cuentasFiltradas(); track $index) {
       <tr>
         <td>{{c.cuentaBancariaId}}</td>
         <td>{{c.cbu}}</td>
