--- a/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
+++ b/gestion-mercado/src/app/pages/inventario-pages/inventarios-list/inventarios-list.html
@@ -1,5 +1,15 @@
 <h2>Inventario</h2>
 
+<select (change)="atributo.set($any($event.target).value)">
+  <option value="cantidad">Cantidad</option>
+  <option value="producto_id">Producto ID</option>
+  <option value="stockMin">StocK Mínimo</option>
+  <option value="precioVenta">Precio Venta</option>
+  <option value="costoAdquisicion">Costo Adquisicón</option>
+</select>
+
+<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
+
 <div class="botones">
   <button type="button" class="btnAgregar" routerLink="/menu/inventarios/form"> Agregar </button>
 </div>
@@ -18,7 +28,7 @@
   </thead>
 
   <tbody>
-    @for (i of inventarios(); track $index) {
+    @for (i of inventariosFiltrados(); track $index) {
       <tr>
         <td>{{ i.inventario_id }}</td>
         <td>{{ i.producto_id }}</td>
