--- a/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
+++ b/gestion-mercado/src/app/pages/lote-pages/lotes-list/lotes-list.html
@@ -1,6 +1,16 @@
 <section class="list-container">
   <h2>Listado de Lotes</h2>
 
+  <select (change)="atributo.set($any($event.target).value)">
+    <option value="nombre">Producto</option>
+    <option value="categoria">Categoría</option>
+    <option value="cantidadDisponible">Cantidad Disponible</option>
+    <option value="costoUnitario">Costo Unitario</option>
+    <option value="fechaIngreso">Fecha de Ingreso</option>
+  </select>
+
+  <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
+
   <div class="botones">
       <button type="button" class="btn-agregar" routerLink="/menu/lotes/form"> Agregar </button>
   </div>
@@ -19,7 +29,7 @@
     </thead>
 
     <tbody class="tablaBody">
-      @for(lote of lotes(); track $index) {
+      @for(lote of lotesFiltrados(); track $index) {
         <tr>
           <td>{{ lote.lote_id }}</td>
 
