--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
@@ -1,11 +1,18 @@
 <h2>PRODUCTOS</h2>
 
+<select (change)="atributo.set($any($event.target).value)">
+  <option value="nombre">Nombre</option>
+  <option value="categoria">Categoría</option>
+</select>
+
+<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
+
 <div class="botones">
   <button type="button" class="btnAgregar" routerLink="/menu/productos/form"> Agregar </button>
 </div>
 
 <ul>
-  @for(product of products(); track $index) {
+  @for(product of productsFiltrados(); track $index) {
     <p>{{product.nombre}}</p>
     <p>{{product.categoria}}</p>
 
