crud y filtro de persona

--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
@@ -25,7 +25,7 @@
           <td>{{ cliente.edad }}</td>
           <td>{{ cliente.dni }}</td>
           <td class="botones">
-            <button class="btnEliminar"> Eliminar </button>
+            <button class="btnEliminar" (click)="eliminarCliente(cliente.clienteId)"> Eliminar </button>
             <button class="btnEditar"> Editar </button>
           </td>
 
