--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
@@ -1,7 +1,15 @@
 <section class="list-container">
   <div class="botones">
-    <button type="button" class="btn-agregar" routerLink="/menu/cliente/form"> Agregar </button>
+    <button type="button" class="btn-agregar" routerLink="/menu/clientes/form"> Agregar </button>
   </div>
+
+  <select (change)="atributo.set($any($event.target).value)">
+  <option value="nombre">Nombre</option>
+  <option value="dni">Dni</option>
+  <option value="edad">Edad</option>
+</select>
+
+<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
 
   <table class="tabla">
     <thead class="encabezado">
@@ -17,7 +25,7 @@
     </thead>
 
     <tbody class="tablaBody">
-      @for (cliente of clientes(); track $index){
+      @for (cliente of clientesFiltrados(); track $index){
         <tr>
           <td>{{ cliente.personaId }}</td>
           <td>{{ cliente.clienteId }}</td>
@@ -26,7 +34,7 @@
           <td>{{ cliente.dni }}</td>
           <td class="botones">
             <button class="btnEliminar" (click)="eliminarCliente(cliente.clienteId)"> Eliminar </button>
-            <button class="btnEditar"> Editar </button>
+            <button class="btnEditar" (click)="modificarCliente(cliente)"> Editar </button>
           </td>
 
         </tr>
