--- a/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.html
+++ b/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.html
@@ -1,1 +1,42 @@
-<p>empleado-form works!</p>
+<h2> {{isEditMode() ? 'Editar Empleado' : 'Registrar Empleado'}} </h2>
+
+<form [formGroup]="form" (ngSubmit)="saveEmpleado()">
+  <div class = "campo">
+    <label>Nombre: </label>
+    <input type="text" formControlName="nombre">
+    @if (form.get('nombre')?.invalid && form.get('nombre')?.touched) {
+      <span class = "error">El campo no puede estar vacio ni contener caracteres no alfabeticos.</span>
+    }
+  </div>
+  <div class = "campo">
+    <label>Dni: </label>
+    <input type="number" formControlName="dni">
+    @if (form.get('dni')?.invalid && form.get('dni')?.touched) {
+      <span class = "error">El DNI debe tener enter 6 y 9 digitos</span>
+    }
+  </div>
+  <div class = "campo">
+    <label>Edad: </label>
+    <input type="number" formControlName="edad">
+    @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
+      <span class = "error">El cliente debe tener entre 18 y 120 años.</span>
+    }
+  </div>
+  <div class = "campo">
+    <label>Email: </label>
+    <input type="email" formControlName="email">
+    @if (form.get('email')?.invalid && form.get('email')?.touched) {
+      <span class = "error">El email debe ser valido.</span>
+    }
+  </div>
+
+  <div class="botones">
+    <button type="submit"[disabled]="form.invalid">
+      {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+    </button>
+
+  @if (isEditMode()) {
+    <button type="button" (click)="cancelEdit()" >Cancelar</button>
+  }
+  </div>
+</form>
