--- a/gestion-mercado/src/app/pages/empleado-pages/empleado-list/empleado-list.html
+++ b/gestion-mercado/src/app/pages/empleado-pages/empleado-list/empleado-list.html
@@ -1,44 +1,45 @@
 <section class="list-container">
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/empleados/form">Agregar</button>
+    <select (change)="atributo.set($any($event.target).value)">
+      <option value="nombre">Nombre</option>
+      <option value="dni">Dni</option>
+      <option value="edad">Edad</option>
+      <option value="email">Email</option>
+    </select>
+
+    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
-  <select (change)="atributo.set($any($event.target).value)">
-  <option value="nombre">Nombre</option>
-  <option value="dni">Dni</option>
-  <option value="edad">Edad</option>
-  <option value="email">Email</option>
-</select>
-
-<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
-
-   <table class="tabla">
+  <table class="tabla">
     <thead class="encabezado">
       <tr>
-        <th> ID Persona </th>
-        <th> ID Empleado </th>
-        <th> Nombre </th>
-        <th> Edad </th>
-        <th> DNI </th>
-        <th> Email </th>
-        <th> Acciones </th>
+        <th>ID Persona</th>
+        <th>ID Empleado</th>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>DNI</th>
+        <th>Email</th>
+        <th>Acciones</th>
       </tr>
     </thead>
 
     <tbody class="tablaBody">
       @for (empleado of empleadosFiltrados(); track $index){
-        <tr>
-          <td>{{ empleado.personaId }}</td>
-          <td>{{ empleado.empleadoId }}</td>
-          <td>{{ empleado.nombre }}</td>
-          <td>{{ empleado.edad }}</td>
-          <td>{{ empleado.dni }}</td>
-          <td>{{ empleado.email }}</td>
-          <td class="botones">
-            <button class="btnEliminar" (click)="eliminarEmpleado(empleado.empleadoId)"> Eliminar </button>
-            <button class="btnEditar" (click)="modificarEmpleado(empleado)"> Editar </button>
-          </td>
-        </tr>
+      <tr>
+        <td>{{ empleado.personaId }}</td>
+        <td>{{ empleado.empleadoId }}</td>
+        <td>{{ empleado.nombre }}</td>
+        <td>{{ empleado.edad }}</td>
+        <td>{{ empleado.dni }}</td>
+        <td>{{ empleado.email }}</td>
+        <td class="botones">
+          <button class="btnEliminar" (click)="eliminarEmpleado(empleado.empleadoId)">
+            Eliminar
+          </button>
+          <button class="btnEditar" (click)="modificarEmpleado(empleado)">Editar</button>
+        </td>
+      </tr>
       }
     </tbody>
   </table>
