--- a/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
+++ b/gestion-mercado/src/app/pages/persona-pages/persona-list/persona-list.html
@@ -1,41 +1,38 @@
 <section class="list-container">
   <div class="botones">
-    <button type="button" class="btn-agregar" routerLink="/menu/personas/form"> Agregar </button>
+    <button type="button" class="btn-agregar" routerLink="/menu/personas/form">Agregar</button>
+    <select (change)="atributo.set($any($event.target).value)">
+      <option value="nombre">Nombre</option>
+      <option value="dni">Edad</option>
+      <option value="edad">Dni</option>
+    </select>
+
+    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
   <table class="tabla">
     <thead class="encabezado">
       <tr>
-        <th> ID </th>
-        <th> Nombre </th>
-        <th> Edad </th>
-        <th> DNI </th>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>DNI</th>
       </tr>
     </thead>
 
-    <select (change)="atributo.set($any($event.target).value)">
-  <option value="nombre">Nombre</option>
-  <option value="dni">Edad</option>
-  <option value="edad">Dni</option>
-
-</select>
-
-<input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
-
     <tbody class="tablaBody">
       @for (persona of personasFiltradas(); track $index){
-        <tr>
-          <td>{{ persona.personaId }}</td>
-          <td>{{ persona.nombre }}</td>
-          <td>{{ persona.edad }}</td>
-          <td>{{ persona.dni }}</td>
-          <td class="botones">
-            <button class="btnEliminar" (click)="deletePersona(persona.personaId)"> Eliminar </button>
-            <button class="btnEditar" (click)="updatePersona(persona)"> Editar </button>
-          </td>
-        </tr>
+      <tr>
+        <td>{{ persona.personaId }}</td>
+        <td>{{ persona.nombre }}</td>
+        <td>{{ persona.edad }}</td>
+        <td>{{ persona.dni }}</td>
+        <td class="botones">
+          <button class="btnEliminar" (click)="deletePersona(persona.personaId)">Eliminar</button>
+          <button class="btnEditar" (click)="updatePersona(persona)">Editar</button>
+        </td>
+      </tr>
       }
     </tbody>
-
   </table>
 </section>
