--- a/gestion-mercado/src/app/pages/menu-page/menu-page.html
+++ b/gestion-mercado/src/app/pages/menu-page/menu-page.html
@@ -42,6 +42,14 @@
           <p> CLIENTES </p>
         </div>
       </li>
+      <!-- Proveedores -->
+      <li class="card" id="proveedores">
+        <a routerLink="/menu/proveedores"> <div class="recuadro"></div> </a>
+        <div class="icon-container">
+          <img class="icon" src="" alt="duenio-icon" />
+          <p> Proveedores </p>
+        </div>
+      </li>
 
       <!-- USUARIOS -->
       <li class="card" id="usuarios">
