--- a/gestion-mercado/src/app/pages/duenios-pages/duenios-list/duenios-list.html
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenios-list/duenios-list.html
@@ -1,6 +1,14 @@
 <section class="list-container">
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/duenios/form"> Agregar </button>
+    <select (change)="atributo.set($any($event.target).value)">
+      <option value="nombre">Nombre</option>
+      <option value="dni">Dni</option>
+      <option value="edad">Edad</option>
+      <option value="email">Email</option>
+    </select>
+
+    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
   <table class="tabla">
@@ -17,7 +25,7 @@
     </thead>
 
     <tbody class="tablaBody">
-      @for (duenio of duenios(); track $index){
+      @for (duenio of dueniosFiltrados(); track $index){
         <tr>
           <td>{{ duenio.personaId }}</td>
           <td>{{ duenio.duenioId }}</td>
@@ -26,8 +34,8 @@
           <td>{{ duenio.dni }}</td>
           <td>{{ duenio.email }}</td>
           <td class="botones">
-            <button class="btnEliminar"> Eliminar </button>
-            <button class="btnEditar"> Editar </button>
+            <button class="btnEliminar" (click)="eliminarDuenio(duenio.duenioId)"> Eliminar </button>
+            <button class="btnEditar" (click)="modificarDuenio(duenio)"> Editar </button>
           </td>
 
         </tr>
