--- a/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
+++ b/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
@@ -1,6 +1,11 @@
 <section class="list-container">
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/usuarios/form"> Agregar </button>
+    <select (change)="atributo.set($any($event.target).value)">
+      <option value="email">Email</option>
+    </select>
+
+    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
 
   <table class="tabla">
@@ -13,13 +18,13 @@
     </thead>
 
     <tbody class="tablaBody">
-      @for (usuario of usuarios(); track $index){
+      @for (usuario of usuariosFiltrados(); track $index){
         <tr>
           <td>{{ usuario.usuarioId }}</td>
           <td>{{ usuario.email }}</td>
           <td class="botones">
-            <button class="btnEliminar"> Eliminar </button>
-            <button class="btnEditar"> Editar </button>
+            <button class="btnEliminar" (click)="eliminarUsuario(usuario.usuarioId)"> Eliminar </button>
+            <button class="btnEditar"(click)="modificarUsuario(usuario)"> Editar </button>
           </td>
         </tr>
       }
