--- a/gestion-mercado/src/styles.css
+++ b/gestion-mercado/src/styles.css
@@ -50,7 +50,7 @@ body, html {
 *, ::before, ::after { box-sizing: border-box; }
 
 main {
-    background-color: #140f14;
+    background-color: #fcf1f1;
     padding: 1rem 5%;
     min-height: 100%;
 }
